Bug 1814452 - Fix crash when marking a message as Spam. r=freaktechnik

Length of the m_ChangeListeners will change during the loop (adding one in my case), which makes accessing statusArray[i] go out of bounds.
I don't know *why* a listener is added mid-flight.

browser_junkCommands.js should have caught it, but it's currently disabled (by bug 1787094)

Differential Revision: https://phabricator.services.mozilla.com/D168631

--HG--
extra : rebase_source : 633f626c1bdaf556aa020b985a7cb098892bad2c
extra : amend_source : 91884a0b24043a6454b24207c263407c6e7a4a8c